Fixed popover width on iOS devices

--- a/sightzing/src/theme/variables.scss
+++ b/sightzing/src/theme/variables.scss
@@ -122,7 +122,7 @@ $card-md-box-shadow: 0 7px 10px 0 rgba(0,0,0,.10), 0 1px 1px -2px rgba(0,0,0,.2)
 
 //Popover
 $popover-wp-width: 100%;
-
+$popover-ios-width: 100%;
 $popover-md-width: 100%;
 
 //Range
